task9/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task9
  labels:
    istio-injection: enabled
