task9/kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task9-app
  namespace: task9
  labels:
    app.kubernetes.io/name: task9-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: task9-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
