task9/kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task9-app
  namespace: task9
  labels:
    app.kubernetes.io/name: task9-app
spec:
  ingressClassName: nginx
  rules:
    - host: task9.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task9-app
                port:
                  number: 80
